# pymodoro

./: .gitignore  README.md  pyproject.toml
src/: requirements-dev.txt
src/pomodoro/: __main__.py
