[build-system]
requires = ['setuptools>=61.1.0', 'wheel']
build-backend = 'setuptools.build_meta'

[project]
name = "fortibroker"
version = "1.3.2-dev"
description = "Script to talk to the FortiManager"
readme = "README.md"
authors = [{ name = "Daryl Stark", email = "daryl.stark@hightechcampus.com" }]
#license = { file = "LICENSE" } # License is not figured out yet
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["forti", "fortimanager", "cict", "hightechcampus"]
dependencies = [
    "pydantic >= 1.9.0",
    "rich >= 12.6.0",
    "requests >= 2.27.0",
    "typer >= 0.9.0"
]
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
    'pytest >= 7.3.0',
    'pycodestyle == 2.10.0',
    'autopep8 == 2.0.0',
    'pylint == 2.17.0',
    'mypy == 1.3.0',
    'flake8 == 6.0.0',
    'pydocstyle == 6.3.0',
]

[project.scripts]
fortibroker = "fortibroker.__main__:main"

[tool.bumpver]
current_version = "1.3.2-dev"
version_pattern = "MAJOR.MINOR.PATCH[-TAG]"
commit_message = "Version {new_version}"
commit = true
tag = false
push = false

[tool.bumpver.file_patterns]
"pyproject.toml" = ['current_version = "{version}"', 'version = "{version}"']
"src/fortibroker/__init__.py" = ["{version}"]
"src/fortimanager_api/__init__.py" = ["{version}"]
"src/setup.py" = ["version='{version}'"]
"docs/conf.py" = ["{version}"]

[tool.pytest.ini_options]
pythonpath = "./src/"
testpaths = [
    "tests"
]